RESOLVED FIXED295696
Fix conditional check for reaching maximum DOM tree depth
https://bugs.webkit.org/show_bug.cgi?id=295696
Summary Fix conditional check for reaching maximum DOM tree depth
Ruthvik Konda
Reported 2025-07-10 01:34:21 PDT
Fix conditional check for reaching maximum DOM tree depth
Attachments
Ruthvik Konda
Comment 1 2025-07-10 10:28:18 PDT
Ruthvik Konda
Comment 2 2025-07-10 10:47:48 PDT
EWS
Comment 3 2025-07-10 19:05:44 PDT
Committed 297241@main (6b7c4e637f2f): <https://commits.webkit.org/297241@main> Reviewed commits have been landed. Closing PR #47829 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.