Fix conditional check for reaching maximum DOM tree depth https://bugs.webkit.org/show_bug.cgi?id=295696 rdar://155538446

Reviewed by Ryosuke Niwa.

Now we start adding as siblings right when we hit the max depth rather than waiting to go over the max.
>= is used to be robust and avoid off-by-one surprises.
Updated test to correctly check for sibling behavior exactly at max depth rather than max depth + 1.

* LayoutTests/fast/parser/block-nesting-cap-expected.txt:
* LayoutTests/fast/parser/block-nesting-cap.html:
* Source/WebCore/html/parser/HTMLConstructionSite.cpp:
(WebCore::HTMLConstructionSite::attachLater):

Canonical link: https://commits.webkit.org/297241@main